objects/User_Access_Review__c.object
<CustomObject>
    <description>Overall Umbrella/Container Object for the Audit Process</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Ending Date for Audit Process</description>
        <inlineHelpText>Enter Audit End Date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Process_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who is owner of the Audit Process and is functionality administrator.</description>
        <inlineHelpText>User who is owner of the Audit Process and is functionality administrator.</inlineHelpText>
        <label>Process Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <description>Date on which Snapshot is taken</description>
        <inlineHelpText>Enter Date on which Snapshot is taken for Both Prod and Util Org</inlineHelpText>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Snapshot_Status__c</fullName>
        <description>To capture the state of Snapshot Process</description>
        <inlineHelpText>Enter state in which Snapshot Process is</inlineHelpText>
        <label>Snapshot Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Snapshot_Taken_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who has taken snapshot of prod.</description>
        <inlineHelpText>Enter user name who is responsible for taking snapshot for audit process</inlineHelpText>
        <label>Snapshot Taken By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Processes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Starting Date for Audit Process</description>
        <inlineHelpText>Enter Start Date for Audit Process</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>User Access Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Audit Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Access Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>